fix: display about image on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -269,12 +269,6 @@ html {
     );
 }
 
-@media screen and (max-width: 640px) {
-    .about__img {
-        display: none !important;
-    }
-}
-
 .icon-sm {
     @apply h-5 xs:h-6 tablet:h-7 sm:h-8 md:h-9 lg:h-10 w-auto;
 }
